# deb-kg

./: .gitignore  README.md  debian_kg_data.json  debian_kg_stats.json  pyproject.toml
config/: deb.yaml
figs/: license.lattice.html
output/: libssl-load.csv
paper/: paper.tex  refs.bib
run/: fetch.py  fetch_maintainers.py  ingest.py  onto.py  plot_licenses.py  scrape_bugs.py  scrape_deps_maintainers.py
run/obsolete/: fetch.py  fetch_maintainers.py
src/: onto.py  util.py
